# jd-matcher

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: dedup.yaml  llm.yaml  saved-searches.yaml  skill_categories.yaml  title_filters.yaml  user_profile.yaml
docs/discovery/: DISCOVERY-NOTES.md  MARKET-ANALYSIS.md  RESEARCH-REPORT.md  ROADMAP.md  UX-SPEC.md
docs/poc/: ALIGNMENT-LOG.md  ARCHITECTURE-REVIEW-2026-04-29.md  BACKLOG.md  DATA-SOURCES.md  DESIGN-GATE-REVIEW.md  PRD.md  SETUP.md  TASKS.md  TDD.md  TEST-SUITE-REVIEW-2026-04-29.md  UX-SPEC.md
docs/research/: 2026-04-28-playwright-cloudflare-bypass.md
prompts/: canonical_extraction_v1.txt  canonical_extraction_v2.txt  canonical_extraction_v3.txt  canonical_extraction_v4.txt  canonical_extraction_v5.txt  canonical_extraction_v6.txt  canonical_extraction_v7.txt  canonical_extraction_v8.txt  dedup_classifier_v1.txt
scripts/: analyze_top_skills.py  reextract_canonical.py  rehydrate_failed.py  run_v6_30sample.py  run_v7_30sample.py  run_v7_gpt4o_30sample.py  run_v8_mini_30.py
src/jd_matcher/: errors.py  pipeline.py  report.py
tests/: conftest.py  helpers.py  test_pipeline_log_integration.py  test_report_cli.py
tests/auth/: test_gmail_oauth.py
tests/db/: test_email_ingest_log_schema.py  test_init_db.py  test_init_db_m2.py  test_init_db_m3.py
tests/dedup/: test_calibrate.py  test_classifier.py  test_engine.py  test_merge.py  test_repost.py  test_url_dedup.py
tests/filter/: test_pipeline_integration.py  test_title_filter.py  test_validate.py
tests/fixtures/: dedup_labels.csv  dedup_synthetic_pairs.yaml
tests/hydrate/: test_browser_fetcher.py  test_rate_limiter.py  (+3 more)
(+188 files in other folders)
