[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jd-matcher"
version = "0.1.0"
description = "Local job-posting triage tool — consolidates LinkedIn and Indeed alerts into a single keyboard-driven browser UI with dedup and state tracking."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: pure function, no I/O, <10ms each",
    "db: uses tmp SQLite, no network, <100ms each",
    "dom: uses TestClient + HTML parse, <200ms each",
    "slow: any test that takes >500ms (LLM mocks with latency sim, large fixtures)",
]
